# PVC_PFE

./: .gitignore  CMakeLists.txt  README.md  certificate.txt  crs.txt  null.d  output.txt
cmake/: FindGMP.cmake  FindGMPXX.cmake  pfe-base.cmake  pfe-config.cmake
pfe/: pfe.cpp  pfe.h
pfe/circuits/: circuit_file.h
pfe/execution/: circuit_execution.h
pfe/gc/: GarbledCircuits_eva.h  GarbledCircuits_gen.h
pfe/io/: highspeed_net_io_channel.h  io_channel.h  net_io_channel.h
pfe/ot/: co.h  cot.h  iknp.h  ot.h
pfe/utils/: aes.h  aes_opt.h  ccrh.h  crh.h  f2k.h  group.h  group_openssl.h  group_r.h  hash.h  mitccrh.h  pfe_construct_compute.h  prg.h  prp.h  utils.h  utils.hpp  zk_ep.h
test/: CMakeLists.txt  ecc.cpp  judge.cpp  pfe_openssl_malicious.cpp  pfe_openssl_semihonest.cpp  pfe_relic_semihonest.cpp  rsa.cpp  tim.cpp
